# neurostate-engine

./: LICENSE  README.en.md  README.md  pyproject.toml
core/: __init__.py  hallucination_sensor.py  interaction_matrix.py  neuro_plasticity.py  prompt_builder.py  state_model.py  update_engine.py
docs/: blog_article_draft.md  neurostate_spec.md  paper_structural_provisioning.md
examples/chat_agent/: demo.py
integrations/claude/: __init__.py
integrations/langchain/: __init__.py
integrations/openai/: __init__.py
neuro_mcp/: __init__.py  server.py
storage/plasticity/: test_user.json
