[project]
name = "neurostate-engine"
version = "0.1.0"
description = "Neural state engine for AI agents - emotional state modeling via neurotransmitter simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3.0"]
openai = ["openai>=1.0.0"]
all = ["langchain>=0.3.0", "openai>=1.0.0"]

[project.scripts]
neurostate-server = "neurostate_engine.mcp.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "mcp", "integrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
